# ml-sast-429

./: README.md  gitstatus.txt
ML-SAST/: .gitignore  .gitlab-ci.yml  .pylintrc  Developer-Documentation.md  Installation.md  README.md  RNN_per_class_metrics.csv  RNN_per_class_metrics_100epoch.csv  Usage.md  dense_nn_results.csv  output.txt  requirements.txt  rnn_results.csv  setup.py
ML-SAST/evaluation/: build.sh  build_miniupnp_special_cases.sh  build_openjpeg_special_cases.sh  entrypoints.c  evaluate-oracle-tests.py  run_prototype_on_oracle_tests.sh
ML-SAST/evaluation/scripts/libtiff/: build.sh  config.yaml
ML-SAST/evaluation/scripts/miniupnp/: build.sh  config.yaml
ML-SAST/example/: config.yaml  merged_report.json  report.json
ML-SAST/example/code/: .main.o.bc  Makefile  build.sh  juliet-example  main.c
ML-SAST/example/code/support/: io.c  (+2 more)
ML-SAST/example/logs/: NEO_LOG_240525050545.txt  NEO_LOG_240525050553.txt  SVF_LOG_date240525050526.txt  SVF_LOG_date240525050549.txt
ML-SAST/example/svf/: edges_graphs.csv  nodes_graphs.csv
ML-SAST/frontend/: setup.py
ML-SAST/frontend/frontend/: util.py
ML-SAST/miniupnp_example/: build.sh  config.yaml  entrypoints.c
ML-SAST/mlsast/: __init__.py
ML-SAST/mlsast/docker/svf/src/: CMakeLists.txt  CSVPrinter.cpp  MLSASTOptions.cpp  TLDG.cpp  svf-mlsast.cpp
ML-SAST/mlsast/frontend/: __init__.py  argparser.py
ML-SAST/mlsast/logic/: __init__.py  project.py
ML-SAST/mlsast/tests/: test_connector.py
ML-SAST/mlsast/util/: __init__.py  config.py  helpers.py  logmessages.py
ML-SAST/neo4j-procedure-src/: pom.xml
(+62 files in other folders)
